create a new topic about translatome

--- a/CONTRIBUTORS.yaml
+++ b/CONTRIBUTORS.yaml
@@ -289,6 +289,9 @@ khanteymoori:
     email: khanteymoori@gmail.com
     orcid: 0000-0001-6811-9196
 
+ldyang14:
+    name: Ludong Yang
+
 lecorguille:
     name: Gildas Le Corguillé
 
