add a new contributor

--- a/CONTRIBUTORS.yaml
+++ b/CONTRIBUTORS.yaml
@@ -231,6 +231,9 @@ hrhotz:
 ic4f:
     name: Sergey Golitsynskiy
 
+IceApink:
+    name: Mingzhe Xie
+
 igcbioinformatics:
     name: IGC Bioinformatics Unit
 
