Improve the tutorial

--- a/CONTRIBUTORS.yaml
+++ b/CONTRIBUTORS.yaml
@@ -217,6 +217,9 @@ hdashnow:
 heylf:
     name: Florian Heyl
 
+hhuili:
+    name: Huihui Li
+
 hmenager:
     name: Hervé Ménager
 
@@ -300,7 +303,7 @@ lecorguille:
 
 LeilyR:
     name: Leily Rabbani
-
+    
 lldelisle:
     name: Lucille Delisle
     email: lucille.delisle@epfl.ch
